bk_ida/gccida/g2/regclass
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1684:1: error: use of undeclared identifier 'costs_0'; did you mean 'costs'?
costs_0 = v4; 
^~~~~~~
costs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:861:22: note: 'costs' declared here
static struct costs *costs;
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1692:9: error: use of undeclared identifier 'costs_0'; did you mean 'costs'?
memset( costs_0, 0, n); 
        ^~~~~~~
        costs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:861:22: note: 'costs' declared here
static struct costs *costs;
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1707:19: error: expected expression
for ( j = *( rtx *)v7; ; j = j[1].fld[0].rtx ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1711:14: error: expected expression
if ( *( rtx *)( v7 + 8) == j ) 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1732:1: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
reg_pref_0 = reg_pref_buffer; 
^~~~~~~~~~
reg_pref
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1759:7: error: use of undeclared identifier 'reg_class_names_1'; did you mean 'reg_class_size'?
v15 = reg_class_names_1[v12++]; 
      ^~~~~~~~~~~~~~~~~
      reg_class_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:163:14: note: 'reg_class_size' declared here
unsigned int reg_class_size[N_REG_CLASSES];
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1760:46: error: use of undeclared identifier 'costs_0'
fprintf( dump, " %s:%i", v15, ( unsigned int)costs_0[v11].cost[v14]); 
                                             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1765:44: error: use of undeclared identifier 'costs_0'
fprintf( dump, " MEM:%i\n", ( unsigned int)costs_0[v13].mem_cost); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1791:8: error: use of undeclared identifier 'costs_0'; did you mean 'costs'?
v22 = &costs_0[v18]; 
       ^~~~~~~
       costs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:861:22: note: 'costs' declared here
static struct costs *costs;
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1817:8: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
v26 = &reg_pref_0[v19]; 
       ^~~~~~~~~~
       reg_pref
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1842:7: error: use of undeclared identifier 'reg_class_names_1'; did you mean 'reg_class_size'?
v30 = reg_class_names_1[( int)v20]; 
      ^~~~~~~~~~~~~~~~~
      reg_class_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:163:14: note: 'reg_class_size' declared here
unsigned int reg_class_size[N_REG_CLASSES];
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1847:8: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
v26 = &reg_pref_0[v34]; 
       ^~~~~~~~~~
       reg_pref
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1856:43: error: use of undeclared identifier 'reg_class_names_1'; did you mean 'reg_class_size'?
fprintf( v16, " pref %s, else %s\n", v30, reg_class_names_1[v28]); 
                                          ^~~~~~~~~~~~~~~~~
                                          reg_class_size
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:163:14: note: 'reg_class_size' declared here
unsigned int reg_class_size[N_REG_CLASSES];
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1857:8: error: use of undeclared identifier 'reg_pref_0'; did you mean 'reg_pref'?
v26 = &reg_pref_0[v34]; 
       ^~~~~~~~~~
       reg_pref
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:870:25: note: 'reg_pref' declared here
static struct reg_pref *reg_pref;
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:1873:7: error: use of undeclared identifier 'costs_0'; did you mean 'costs'?
free( costs_0); 
      ^~~~~~~
      costs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/regclass.c:861:22: note: 'costs' declared here
static struct costs *costs;
                     ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/regclass/src/obj/regclass.o] Error 1
